--- a/NortWindAjaxProject/appsettings.json
+++ b/NortWindAjaxProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "server=(localdb)\\MSSQLLocalDB; database=NORTHWND; Integrated Security=true;Encrypt=false"
+    "SqlConnection": "server=SERVER_NAME; database=DB_NAME; Integrated Security=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
